# HAlign-4

./: CMakeLists.txt  LICENSE  README.md
include/: align.h  anchor.h  config.hpp  consensus.h  hash.h  kseq.h  mash.h  preprocess.h  seed.h  utils.h
recipe/: build.sh  meta.yaml
src/: halign4.cpp
src/align/: align.cpp  cigar.cpp  ref_aligner.cpp
src/consensus/: consensus.cpp  selector.cpp
src/mash/: hash.cpp  mash.cpp
src/seed/: anchor.cpp  minimizer.cpp
src/utils/: cmd.cpp  file_io.cpp  hash.cpp  preprocess.cpp  seq_io.cpp
test/: CMakeLists.txt  run_tests.sh  test_align.cpp  test_anchor.cpp  test_consensus.cpp  test_jaccard.cpp  test_mash.cpp  test_read_fasta.cpp
